--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,9 @@
         <a href="/">Mybrary</a>
         <ul>
             <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Authors</a></li>
+            <li><a href="/authors/new">Add Author</a></li>
+            <li><a href="/books">books</a></li>
+            <li><a href="/books/new">Add book</a></li>
         </ul>
     </nav>
 </header>
