--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header>
-    <nav>
-        <a href="/">Mybrary</a>
-        <ul>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Author</a></li>
-            <li><a href="/books">books</a></li>
-            <li><a href="/books/new">Add book</a></li>
-        </ul>
-    </nav>
+  <nav class="header-nav">
+    <a class="header-title" href="/">THINK LIKE PRO</a>
+    <ul>
+      <li><a href="/authors">Authors</a></li>
+      <li><a href="/authors/new">Add Author</a></li>
+      <li><a href="/books">Books</a></li>
+      <li><a href="/books/new">Add Book</a></li>
+    </ul>
+  </nav>
 </header>
